<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ui.resetpassword.ResetpasswordFragment">

    <!--    Label - Messenger name      -->
    <include
        android:id="@+id/messenger_label"
        layout="@layout/label_messenger_name" />

    <TextView
        android:id="@+id/resetpassword_label"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/resetpassword_label"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messenger_label" />


    <TextView
        android:id="@+id/resetpassword_description_1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/resetpassword_description_1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpassword_label" />

    <TextView
        android:id="@+id/resetpassword_description_2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/resetpassword_description_2"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpassword_description_1" />


    <!--      input -> email or username        -->
    <LinearLayout
        android:id="@+id/resetpassword_email_or_username_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpassword_description_2">

        <TextView
            android:id="@+id/login_email_or_username_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/resetpassword_email_or_username_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/login_email_or_username_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_auth"
            android:backgroundTint="@android:color/white"
            android:hint="@string/resetpassword_email_or_username_placeholder_text"
            android:inputType="textEmailAddress|textPersonName"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <!--        Remember password button     -->
    <LinearLayout
        android:id="@+id/login_forgot_password_btn_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpassword_email_or_username_input_layout">

        <TextView
            android:id="@+id/login_forgot_password_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4sp"
            android:text="@string/resetpassword_remember_password_btn_text1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/login_forgot_password_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetpassword_remember_password_btn_text2"
            android:textColor="#FB9F0D"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#DEA446"
        android:letterSpacing="0.13"
        android:paddingHorizontal="50dp"
        android:paddingVertical="12dp"
        android:text="@string/resetpassword_submit_btn"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password_btn_layout" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
