<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">


    <!--    Label - Messenger name      -->
    <include
        android:id="@+id/messenger_label"
        layout="@layout/label_messenger_name" />


    <TextView
        android:id="@+id/page404_label"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/page404_label"
        android:textColor="#FB9F0D"
        android:textSize="70sp"
        android:textStyle="bold"
        android:letterSpacing="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messenger_label" />


    <TextView
        android:id="@+id/page404_description1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/page404_description1"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:letterSpacing="0.05"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page404_label" />

    <TextView
        android:id="@+id/page404_description2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/page404_description2"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:letterSpacing="0.05"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page404_description1" />

    <Button
        android:id="@+id/page404_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="#DEA446"
        android:letterSpacing="0.1"
        android:paddingHorizontal="50dp"
        android:paddingVertical="12dp"
        android:text="@string/page404_btn"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page404_description2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
