<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ui.login.LoginActivity"
    >
<!--        Later change LoginActivity -> LoginFragment         -->

    <!--    Label - Messenger name      -->
    <include
        android:id="@+id/messenger_label"
        layout="@layout/label_messenger_name" />


    <!--    google auth button-->
    <LinearLayout
        android:id="@+id/google_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messenger_label"
        app:layout_goneMarginTop="200dp">

        <include layout="@layout/googlebtn" />
    </LinearLayout>

    <!--    or divider section-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/google_btn"
        tools:layout_editor_absoluteX="16dp">

        <include layout="@layout/or_divider" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_label"
        android:layout_width="320dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/login_label_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <!--      input -> email or username        -->
    <LinearLayout
        android:id="@+id/login_email_or_username_layoutinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_label">

        <TextView
            android:id="@+id/login_email_or_username_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/login_email_or_username_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/login_email_or_username_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/login_input"
            android:backgroundTint="@android:color/white"
            android:hint="@string/login_email_or_username_placeholder_text"
            android:inputType="textEmailAddress|textPersonName"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <!--      input -> password        -->
    <LinearLayout
        android:id="@+id/password_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_or_username_layoutinput">

        <TextView
            android:id="@+id/password_input_label"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/login_password_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/login_input"
            android:backgroundTint="@android:color/white"
            android:hint="@string/login_password_placeholder_text"
            android:inputType="textPassword"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_label" />
    </LinearLayout>

    <!--        Forgot password button     -->
    <LinearLayout
        android:id="@+id/login_forgot_password_btn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout">

        <TextView
            android:id="@+id/login_forgot_password_btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password_btn_text"
            android:textColor="#FB9F0D"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#DEA446"
        android:letterSpacing="0.1"
        android:paddingHorizontal="50dp"
        android:paddingVertical="12dp"
        android:text="@string/login_login_btn_text"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password_btn_layout" />

    <LinearLayout
        android:id="@+id/login_signup_divider"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button">

        <View
            android:id="@+id/or_divider_right"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/login_to_signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/login_signup_divider">

        <TextView
            android:id="@+id/login_to_signup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/login_to_signup_label_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/login_to_signup_btn_layout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/to_signup_btn"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="35dp"
            android:paddingVertical="13dp">

            <TextView
                android:id="@+id/login_to_signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/login_to_signup_btn"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>