<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">


    <!--    Label - Messenger name      -->
    <include
        android:id="@+id/messenger_label"
        layout="@layout/label_messenger_name" />

    <!--    google auth button-->
    <LinearLayout
        android:id="@+id/google_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messenger_label">

        <include layout="@layout/googlebtn" />
    </LinearLayout>

    <!--    or divider section-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/google_btn"
        tools:layout_editor_absoluteX="16dp">

        <include layout="@layout/or_divider" />
    </LinearLayout>

    <TextView
        android:id="@+id/signup_label"
        android:layout_width="320dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/signup_label_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout
        android:id="@+id/signup_email_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_label">

        <TextView
            android:id="@+id/signup_email_input_label"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/signup_email_label_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/signup_email_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/login_input"
            android:backgroundTint="@android:color/white"
            android:hint="@string/signup_email_placeholder_text"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_username_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_input_layout">

        <TextView
            android:id="@+id/signup_username_label"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/signup_username_label_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/signup_username_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="@drawable/login_input"
            android:backgroundTint="@android:color/white"
            android:hint="@string/signup_username_placeholder_text"
            android:inputType="textPersonName"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_password_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_input_layout">

        <TextView
            android:id="@+id/password_input_label"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/signup_password_label_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/signup_password_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input"
            android:backgroundTint="@android:color/white"
            android:hint="@string/signup_password_placeholder_text"
            android:padding="14dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#DEA446"
        android:paddingHorizontal="50dp"
        android:paddingVertical="12dp"
        android:text="@string/signup_signup_btn_text"
        android:textColor="@android:color/white"
        android:textFontWeight="700"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_input_layout" />

    <LinearLayout
        android:id="@+id/tologin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/submit_button">

        <TextView
            android:id="@+id/tologin_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="Have an account?"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tologin_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="Log in"
            android:textColor="#FB9F0D"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
